--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,17 +1,10 @@
-Slate v1.0.4
+Slate v1.0.7
 ============
 Release Date: January 23, 2025
 
-TUTORIAL SKIP FIX
------------------
-Fixed issue where declining the tutorial ("No, I've played before") 
-still showed the game overview/intro screen.
-
-Now when user says they've played before:
-- Tutorial is marked complete
-- Intro screen is NOT shown
-- "Show intro on start" setting is disabled
-- User goes directly to the game
-
-Users can always re-enable "Show intro on start" in the menu settings
-if they want to see it in the future.
+APP ICON WITH GS ORIGINALS BADGE
+--------------------------------
+Updated icon featuring:
+- 8-box word grid with connecting lines
+- Game Shelf puzzle piece logo at bottom center
+- Identifies as part of the GS Originals family
