--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,10 +1,13 @@
-Slate v1.0.7
+Slate v1.0.8
 ============
 Release Date: January 23, 2025
 
-APP ICON WITH GS ORIGINALS BADGE
---------------------------------
-Updated icon featuring:
-- 8-box word grid with connecting lines
-- Game Shelf puzzle piece logo at bottom center
-- Identifies as part of the GS Originals family
+PWA SAFE AREA SUPPORT
+---------------------
+Added iOS safe area inset support for PWA mode:
+- Body respects notch/Dynamic Island spacing
+- Content doesn't get hidden behind system UI
+- Better experience on modern iPhones
+
+This ensures the game displays properly when installed
+as a PWA on devices with notches or Dynamic Island.
