Deploy Slate v1.0.12 (13 files)

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,9 +1,11 @@
-Slate v1.0.11
+Slate v1.0.12
 =============
-Release Date: January 24, 2026
+Release Date: January 25, 2026
 
-FIX: "I KNOW THE RULES" FLOW
-----------------------------
-- Added extra safeguard to prevent "How to Play" intro from 
-  appearing after clicking "I know the rules"
-- skipIntroAfterTutorial flag now set during skip flow
+GAME SHELF HINT HELPER INTEGRATION
+----------------------------------
+- Added storeHintData() function
+- Automatically saves progress to localStorage when game loads
+- Enables Game Shelf Hint Helper to auto-detect puzzle data
+- Exposes puzzle #, words completed, current row (NOT the words)
+- Data stored as gameshelf_hint_data key
